<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mest" />

    <FrameLayout
        android:id="@+id/frametransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgtheme">

    </FrameLayout>

    <ImageView
        android:id="@+id/devcon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-450dp"
        android:padding="16dp"
        android:src="@drawable/devcongress" />


    <ScrollView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="-60dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="198dp"
                android:layout_margin="8dp"
                android:paddingTop="60dp">

                <ImageView
                    android:id="@+id/imageOne"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ms" />

                <TextView
                    android:id="@+id/textOne"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="11dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:text="@string/titleOne"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageTwo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/meetup" />

                <TextView
                    android:id="@+id/textTwo"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageOne"
                    android:layout_marginLeft="33dp"
                    android:layout_toRightOf="@+id/imageOne"
                    android:text="@string/titleTwo"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/slack" />

                <TextView
                    android:id="@+id/slackpage"
                    style="@style/buttonBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/linkColor"
                    android:text="@string/slack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/twitter" />

                <TextView
                    android:id="@+id/twitterpage"
                    style="@style/buttonBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/linkColor"
                    android:text="@string/tiwitter" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/facebook" />

                <TextView
                    android:id="@+id/facebookpage"
                    style="@style/buttonBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/linkColor"
                    android:text="@string/facebook" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/youtube" />

                <TextView
                    android:id="@+id/youtubechannel"
                    style="@style/buttonBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/linkColor"
                    android:text="@string/youtube" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/email" />

                <TextView
                    android:id="@+id/emailAddress"
                    style="@style/buttonBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/linkColor"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/web" />

                <TextView
                    android:id="@+id/website"
                    style="@style/buttonBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/linkColor"
                    android:text="@string/web" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>